revisa storytelling de todos os notebooks

--- a/coleta.ipynb
+++ b/coleta.ipynb
@@ -17,14 +17,8 @@
    "metadata": {},
    "source": [
     "# Dados das legislaturas\n",
-    "Legislatura é o nome dado ao período de trabalhos parlamentares entre uma eleição e outra."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b85b8aea-1e5c-4b39-88dd-066bbbfdd0cb",
-   "metadata": {},
-   "source": [
+    "Legislatura é o nome dado ao período de trabalhos parlamentares entre uma eleição e outra.\n",
+    "\n",
     "Iniciamos a coleta verificando todas as legislaturas que já existiram no país."
    ]
   },
@@ -59,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "1a863257-c2b1-4e3c-b5a7-ab3924965b2d",
    "metadata": {},
    "outputs": [],
@@ -69,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "8bac77e7-ebde-41e4-a74a-75ed6f7e64e8",
    "metadata": {},
    "outputs": [],
@@ -103,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "53d49864-8f79-45d2-a09a-0e5e846818f7",
    "metadata": {},
    "outputs": [],
@@ -122,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f7c474c5-f7eb-451d-91a5-0c58e0283d08",
    "metadata": {},
    "outputs": [],
