--- a/tratamento-dados/tratamento-proposicoes.ipynb
+++ b/tratamento-dados/tratamento-proposicoes.ipynb
@@ -29,7 +29,16 @@
    "id": "f42b1363-969f-4581-bb16-a87bd16a9477",
    "metadata": {},
    "source": [
-    "Os dados referentes às proposições legislativas foram coletados manualmente a partir de arquivos estáticos disponíveis em https://dadosabertos.camara.leg.br/swagger/api.html#staticfile. Então, antes de iniciar seu tratamento, reuniremos todos os arquivos em um único dataframe pandas:"
+    "Os dados referentes às proposições legislativas foram coletados manualmente a partir de arquivos estáticos disponíveis em [https://dadosabertos.camara.leg.br/swagger/api.html#staticfile](https://dadosabertos.camara.leg.br/swagger/api.html#staticfile). Os arquivos utilizados nesse projeto estão disponíveis em [../dados/proposicoes](../dados/proposicoes).\n",
+    "Percebemos a necessidade de realizar limpeza dos dados coletados antes de utilizá-los nas análises, então nesse notebook descrevemos o pré-processamento necessário."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6a12f9c-2c2d-41ca-9de6-0a38f450768d",
+   "metadata": {},
+   "source": [
+    "Reunimos todos os arquivos em um único dataframe pandas"
    ]
   },
   {
@@ -867,13 +876,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "55844d1b-f889-4b17-8100-059528ec0bfa",
+   "metadata": {},
+   "source": [
+    "Adiciona a `keywords` toda palavra que não for uma stopword ou número"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "3d4ec270-87b8-4068-aa91-badcc5d6d6f8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# adiciona a `keywords` toda palavra que não for uma stopword ou número\n",
     "def remove_stopwords_punctuation_da_sentenca(texto):\n",
     "    padrao_digitos = r'[0-9]'\n",
     "    texto = re.sub(padrao_digitos, '', texto)\n",
@@ -885,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "7b5ab9eb-b0f8-46fc-9f04-425fea62b5b5",
    "metadata": {},
    "outputs": [],
@@ -903,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "42aa1573-57b2-47e0-bdf5-195df75aeda3",
    "metadata": {},
    "outputs": [],
@@ -914,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "e54d5754",
    "metadata": {},
    "outputs": [],
@@ -923,8 +939,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9c5323f4-993e-4175-8a0a-57ac0c954fbd",
+   "metadata": {},
+   "source": [
+    "Retira do dataframe proposições cujas `keywords` ficaram vazias depois da limpeza"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "8c6b13d4-639a-4782-889d-e288ee55b511",
    "metadata": {},
    "outputs": [],
@@ -934,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "7e529c86-c2e8-4d0c-9584-4972b1116ffa",
    "metadata": {},
    "outputs": [
@@ -1052,7 +1076,7 @@
        "109  manutenção,ato,tribunal,contas,união,tcu,deneg...  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,7 +1090,9 @@
    "id": "c1e48f47-21f6-4a9f-8128-617d812af1aa",
    "metadata": {},
    "source": [
-    "# Extração de palavras chaves das ementas, quando necessário"
+    "# Extração de palavras chaves das ementas, quando necessário\n",
+    "\n",
+    "Verificamos que algumas propostas legislativas não possuem palavras chave desde sua coleta, por isso extrairemos essas palavras do campo `ementa`."
    ]
   },
   {
@@ -1079,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "0aa209d9-1781-4dbf-a801-40bd448f12d2",
    "metadata": {},
    "outputs": [],
@@ -1097,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "d586fd0b-ac99-4587-a9aa-9e09c7b22dbc",
    "metadata": {},
    "outputs": [],
@@ -1115,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "85ec802a-aa94-4808-bdbb-5f7e327ac69f",
    "metadata": {},
    "outputs": [],
@@ -1127,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "6fab14e0-eb45-43e0-b7fb-ead0493c2d2f",
    "metadata": {},
    "outputs": [],
@@ -1145,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "524a394c-b1a8-4d85-9fe9-2694eb103f87",
    "metadata": {},
    "outputs": [],
@@ -1163,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "94050d6d-8938-4945-a77e-c2e0eb07631e",
    "metadata": {},
    "outputs": [],
@@ -1173,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "77ec36c2-8314-4633-9e59-8a1733fe0d2e",
    "metadata": {},
    "outputs": [],
@@ -1188,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "b2da805e-33fb-464c-a6f4-b3ea0a35dbaf",
    "metadata": {},
    "outputs": [],
@@ -1206,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "df066876-939b-4e38-815f-8277e41feadd",
    "metadata": {},
    "outputs": [],
@@ -1219,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "6b7d25d6-39f9-4016-8e5f-b65b3063e733",
    "metadata": {},
    "outputs": [],
@@ -1229,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "fcbb3e3c-b6cc-45f9-a512-1ac8f74bbe08",
    "metadata": {},
    "outputs": [],
@@ -1241,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "e1203e48-236b-45e4-871d-9d82fbc1bc8e",
    "metadata": {},
    "outputs": [],
@@ -1251,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "867a168d-7085-4c4b-aaca-705da584e380",
    "metadata": {},
    "outputs": [],
@@ -1260,8 +1286,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a7538c66-2fbf-4b98-a149-f27ec5f36aa8",
+   "metadata": {},
+   "source": [
+    "Foram analisados os 50 bigramas mais frequentes e identificados os semanticamente irrelevantes para criacao de `keywords`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "31df9b07-a724-4f47-b660-c69ca1b37eee",
    "metadata": {},
    "outputs": [],
@@ -1278,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "5c12f29b",
    "metadata": {},
    "outputs": [],
@@ -1289,8 +1323,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4e91c016-bc5f-4a0d-9ab4-6e691e8e0f04",
+   "metadata": {},
+   "source": [
+    "Remove palavras irrelevantes originarias dos bigramas"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "id": "16eb54d7-07a3-4d04-9fb1-b8ac65ee420d",
    "metadata": {},
    "outputs": [],
@@ -1305,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "id": "d2caac5f-181c-48ae-bd92-35823fc0145f",
    "metadata": {},
    "outputs": [],
@@ -1323,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "id": "28142559-3f9f-4d1a-9e42-006e7a1ac7b1",
    "metadata": {},
    "outputs": [],
@@ -1341,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "id": "44227261-f038-4a1f-bc1c-35fcb71b9a15",
    "metadata": {},
    "outputs": [],
@@ -1359,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "id": "08daffb1",
    "metadata": {},
    "outputs": [],
@@ -1369,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "id": "4e8755f6",
    "metadata": {},
    "outputs": [
@@ -1415,7 +1457,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1429,12 +1471,12 @@
    "id": "463eafed-3ab7-4d69-b7c9-096c3b04d983",
    "metadata": {},
    "source": [
-    "# Reuni dados em um único dataset"
+    "# Reuni dados em um único dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "id": "856c311e-09a4-40bc-b96f-220df0c760f5",
    "metadata": {},
    "outputs": [],
@@ -1444,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "id": "c44336bc-9bd6-40eb-ac2e-ce67dfa4b8c5",
    "metadata": {},
    "outputs": [
@@ -1454,7 +1496,7 @@
        "(152386, 8)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1465,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "id": "85293580-9246-45b4-9212-af9e8293b82c",
    "metadata": {},
    "outputs": [
@@ -1497,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "id": "106b4aed-f9e1-4ddd-a7cc-6d6dcbdc4336",
    "metadata": {},
    "outputs": [],
