--- a/tratamento-dados/criacao-vocabulario.ipynb
+++ b/tratamento-dados/criacao-vocabulario.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1da2a809-b92b-4782-95bf-6a83edc97fcc",
    "metadata": {},
    "outputs": [],
@@ -15,12 +15,20 @@
    "id": "f7b29085-50e0-49b8-9eda-3ce4872748fa",
    "metadata": {},
    "source": [
-    "# Seleção de termos para suportar a análise abaixo"
+    "# Criação de vocabulário"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "607b7f8a-7a24-4ed4-bb64-411b31182b6f",
+   "metadata": {},
+   "source": [
+    "Percebemos que as palavras chave presentes na coluna `keywords` não correspondem ao vocabulário presente no conjunto de dados \"Temas\" presente no Portal de Dados Abertos da Câmara dos Deputados Federais e coletado pelo notebook [../coleta](../coleta). Por esse motivo foi necessário correlacionar as palavras chave presentes na coluna `keywords` com os temas do vocabulário."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "81af836c-c680-44cc-bdf5-61c4d1faa26f",
    "metadata": {},
    "outputs": [],
@@ -30,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "269642d4-da6d-47e6-a852-88d676b6e590",
    "metadata": {},
    "outputs": [
@@ -70,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f9deba05-e82d-47db-b53a-e9f17bacc4c0",
    "metadata": {},
    "outputs": [],
@@ -80,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "40285e2f-710d-476a-8e94-e89bea3a3db4",
    "metadata": {},
    "outputs": [],
@@ -90,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "487b60d8-00e1-43b6-9e33-84d9437cbd4b",
    "metadata": {},
    "outputs": [],
@@ -102,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "6e436d7c-0d5a-4434-a160-c1d6c71c945c",
    "metadata": {},
    "outputs": [],
@@ -112,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "9a50ab35-d2de-477b-affb-1b1f8c2e8a73",
    "metadata": {},
    "outputs": [],
@@ -127,12 +135,12 @@
    "id": "fb4eec57-ef16-4a99-ba62-d4de31df98b5",
    "metadata": {},
    "source": [
-    "Foram revisadas as palavras chaves contidas no arquivo anterior e selecionadas as referentes a proteção de direitos de grupos historicamente marginalizados. Em seguida, as palavras foram relacionadas manualmente aos temas presentes no conjunto de dados \"Temas\" [das proposições legislativas] presente no Portal de Dados Abertos da Câmara dos Deputados Federais."
+    "Foram revisadas as palavras chaves contidas no arquivo anterior e selecionadas apenas as referentes a proteção de direitos de grupos historicamente marginalizados. Em seguida, as palavras foram relacionadas manualmente aos temas presentes no conjunto de dados \"Temas\" presente no Portal de Dados Abertos da Câmara dos Deputados Federais."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 13,
    "id": "4138d5b8-149d-45c1-ba1a-fa32542adeb2",
    "metadata": {},
    "outputs": [],
@@ -142,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 14,
    "id": "baff25fd-e63a-4a4d-862d-776f8020f1b5",
    "metadata": {},
    "outputs": [
@@ -171,8 +179,6 @@
        "      <th>sigla</th>\n",
        "      <th>nome</th>\n",
        "      <th>descricao</th>\n",
-       "      <th>Unnamed: 4</th>\n",
-       "      <th>pesquisar contexto</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -182,16 +188,12 @@
        "      <td>NaN</td>\n",
        "      <td>Administração Pública</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>64</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Agricultura, Pecuária, Pesca e Extrativismo</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -200,8 +202,6 @@
        "      <td>NaN</td>\n",
        "      <td>Arte, Cultura e Religião</td>\n",
        "      <td>territporios obra-de-arte histórico-cultural a...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -209,16 +209,12 @@
        "      <td>NaN</td>\n",
        "      <td>Cidades e Desenvolvimento Urbano</td>\n",
        "      <td>natalidade pacificação</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>62</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Ciência, Tecnologia e Inovação</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -233,22 +229,15 @@
        "3   41    NaN             Cidades e Desenvolvimento Urbano   \n",
        "4   62    NaN               Ciência, Tecnologia e Inovação   \n",
        "\n",
-       "                                           descricao  Unnamed: 4  \\\n",
-       "0                                                NaN         NaN   \n",
-       "1                                                NaN         NaN   \n",
-       "2  territporios obra-de-arte histórico-cultural a...         NaN   \n",
-       "3                             natalidade pacificação         NaN   \n",
-       "4                                                NaN         NaN   \n",
-       "\n",
-       "  pesquisar contexto  \n",
-       "0                NaN  \n",
-       "1                NaN  \n",
-       "2                NaN  \n",
-       "3                NaN  \n",
-       "4                NaN  "
+       "                                           descricao  \n",
+       "0                                                NaN  \n",
+       "1                                                NaN  \n",
+       "2  territporios obra-de-arte histórico-cultural a...  \n",
+       "3                             natalidade pacificação  \n",
+       "4                                                NaN  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,8 +247,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "527852cc-dbfd-4da3-9de3-fe6a6e668905",
+   "metadata": {},
+   "source": [
+    "Cria vocabulário completo"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 15,
    "id": "c63cfe77-8054-47b9-a243-930559e58feb",
    "metadata": {},
    "outputs": [],
@@ -269,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "id": "2026e25a-19a0-4c61-b347-ba9d3b32845a",
    "metadata": {},
    "outputs": [],
@@ -279,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 17,
    "id": "9f15e97a-1fca-44e5-88d6-523398138403",
    "metadata": {},
    "outputs": [],
@@ -295,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 18,
    "id": "7f45b010-bca6-42af-ac53-b80053f8548c",
    "metadata": {},
    "outputs": [
@@ -369,7 +366,7 @@
        "4  35  Arte, Cultura e Religião              ancine"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,17 +377,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 19,
    "id": "b510f805-fffe-48c0-a430-4925ff072565",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(139, 3)"
+       "(109, 3)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,18 +397,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "af418f8d-1ca8-4935-9f33-3e9e0ac4b474",
+   "metadata": {},
+   "source": [
+    "Retira palavras chaves em branco, caso haja"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 21,
    "id": "6a3b52c2-d1bd-4166-9251-5b67c158a997",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(138, 3)"
+       "(109, 3)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 22,
    "id": "056a57af-764c-44b9-8ebb-5a7a75703422",
    "metadata": {},
    "outputs": [],
@@ -444,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 25,
    "id": "f116d078-1a5e-4e5b-b1d6-b1994b4373b7",
    "metadata": {},
    "outputs": [],
@@ -454,149 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "fd67399e-58d2-41bf-825f-bf26f4fe4263",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>siglaTipo</th>\n",
-       "      <th>ano</th>\n",
-       "      <th>codTipo</th>\n",
-       "      <th>descricaoTipo</th>\n",
-       "      <th>ementa</th>\n",
-       "      <th>ementaDetalhada</th>\n",
-       "      <th>keywords</th>\n",
-       "      <th>temas</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>127</th>\n",
-       "      <td>204796</td>\n",
-       "      <td>PL</td>\n",
-       "      <td>1965</td>\n",
-       "      <td>139</td>\n",
-       "      <td>Projeto de Lei</td>\n",
-       "      <td>ESTABELECE A OBRIGATORIEDADE DE HASTEAMENTO E ...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>obrigatoriedade,hasteamento,arriação,bandeira,...</td>\n",
-       "      <td>Direitos Humanos e Minorias</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>135</th>\n",
-       "      <td>204872</td>\n",
-       "      <td>PL</td>\n",
-       "      <td>1965</td>\n",
-       "      <td>139</td>\n",
-       "      <td>Projeto de Lei</td>\n",
-       "      <td>DA NOVA REDAÇÃO AO ARTIGO PRIMEIRO DA LEI 14, ...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>alteração,lei,federal,concessão,abatimento,pre...</td>\n",
-       "      <td>Direitos Humanos e Minorias</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>152</th>\n",
-       "      <td>205036</td>\n",
-       "      <td>PL</td>\n",
-       "      <td>1965</td>\n",
-       "      <td>139</td>\n",
-       "      <td>Projeto de Lei</td>\n",
-       "      <td>DETERMINA A DISTRIBUIÇÃO GRATUITA DOS DIARIO O...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>determinação,distribuição,gratuita,diario,cong...</td>\n",
-       "      <td>Direitos Humanos e Minorias</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>213</th>\n",
-       "      <td>205606</td>\n",
-       "      <td>PL</td>\n",
-       "      <td>1965</td>\n",
-       "      <td>139</td>\n",
-       "      <td>Projeto de Lei</td>\n",
-       "      <td>DECLARA DE UTILIDADE PUBLICA A SOCIEDADE AUXIL...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>declaração,utilidade,publica,instituição,benef...</td>\n",
-       "      <td>Direitos Humanos e Minorias</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>231</th>\n",
-       "      <td>205780</td>\n",
-       "      <td>PL</td>\n",
-       "      <td>1965</td>\n",
-       "      <td>139</td>\n",
-       "      <td>Projeto de Lei</td>\n",
-       "      <td>RETIRA O CARATER CRIMINOSO DO ABORTO VOLUNTARI...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>exclusão,aborto,crime,autorização,medico,reali...</td>\n",
-       "      <td>Saúde</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         id siglaTipo   ano  codTipo   descricaoTipo  \\\n",
-       "127  204796        PL  1965      139  Projeto de Lei   \n",
-       "135  204872        PL  1965      139  Projeto de Lei   \n",
-       "152  205036        PL  1965      139  Projeto de Lei   \n",
-       "213  205606        PL  1965      139  Projeto de Lei   \n",
-       "231  205780        PL  1965      139  Projeto de Lei   \n",
-       "\n",
-       "                                                ementa ementaDetalhada  \\\n",
-       "127  ESTABELECE A OBRIGATORIEDADE DE HASTEAMENTO E ...             NaN   \n",
-       "135  DA NOVA REDAÇÃO AO ARTIGO PRIMEIRO DA LEI 14, ...             NaN   \n",
-       "152  DETERMINA A DISTRIBUIÇÃO GRATUITA DOS DIARIO O...             NaN   \n",
-       "213  DECLARA DE UTILIDADE PUBLICA A SOCIEDADE AUXIL...             NaN   \n",
-       "231  RETIRA O CARATER CRIMINOSO DO ABORTO VOLUNTARI...             NaN   \n",
-       "\n",
-       "                                              keywords  \\\n",
-       "127  obrigatoriedade,hasteamento,arriação,bandeira,...   \n",
-       "135  alteração,lei,federal,concessão,abatimento,pre...   \n",
-       "152  determinação,distribuição,gratuita,diario,cong...   \n",
-       "213  declaração,utilidade,publica,instituição,benef...   \n",
-       "231  exclusão,aborto,crime,autorização,medico,reali...   \n",
-       "\n",
-       "                           temas  \n",
-       "127  Direitos Humanos e Minorias  \n",
-       "135  Direitos Humanos e Minorias  \n",
-       "152  Direitos Humanos e Minorias  \n",
-       "213  Direitos Humanos e Minorias  \n",
-       "231                        Saúde  "
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "proposicoes[~proposicoes['temas'].isnull()].head() #deve ser excluído ao final do notebook"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 26,
    "id": "026c0146-e4eb-4f6f-b9ea-9120c41a2282",
    "metadata": {},
    "outputs": [],
