--- a/tratamento-dados/tratamento-candidaturas-eleitas.ipynb
+++ b/tratamento-dados/tratamento-candidaturas-eleitas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "5e2f4128-f32d-406a-a939-b4b819f211b3",
    "metadata": {},
    "outputs": [],
@@ -19,8 +19,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "99f90cd0-794b-485e-adee-ced46d68d8c8",
+   "metadata": {},
+   "source": [
+    "A coleta de dados referentes às candidaturas eleitas foi realizada através do notebook [../coleta.ipynb](../coleta.ipynb). \n",
+    "Percebemos a necessidade de realizar limpeza dos dados coletados antes de utilizá-los nas análises, então nesse notebook descrevemos o pré-processamento necessário."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "ede19130-2dab-4632-8f57-fe31e2ec44a8",
    "metadata": {},
    "outputs": [],
@@ -30,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "61ebc410-cc83-431b-893e-52141d0bed38",
    "metadata": {},
    "outputs": [
@@ -167,7 +176,7 @@
        "4  dep.taliriapetrone@camara.leg.br    F  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "bae441b1-81cd-4a1d-aadf-d3807d040a08",
    "metadata": {},
    "outputs": [],
@@ -197,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "a7a0b499-6efe-4f49-8c1d-e4257c6319fd",
    "metadata": {},
    "outputs": [
@@ -283,7 +292,7 @@
        "4  204464          PSOL      RJ             56    F"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "b1cc9b10-f1ca-4862-a7c1-ca7782f48d9d",
    "metadata": {},
    "outputs": [
@@ -310,14 +319,14 @@
      "data": {
       "text/plain": [
        "id                 0\n",
-       "siglaPartido     270\n",
+       "siglaPartido     278\n",
        "siglaUf            0\n",
        "idLegislatura      0\n",
        "sexo               0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "75d46484-096b-4850-b766-845569f26fea",
    "metadata": {},
    "outputs": [
@@ -350,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "1c0748f9-5549-482e-9543-e6768d06ce54",
    "metadata": {},
    "outputs": [
@@ -365,7 +374,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "8bbb23c3-8850-4929-9d95-e15c686157ef",
    "metadata": {},
    "outputs": [],
