refatora trecho de codigo sobre legislaturas

--- a/analise-dados/analise-candidaturas-eleitas.ipynb
+++ b/analise-dados/analise-candidaturas-eleitas.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "349abb0d-516f-4487-8b3a-6e837bd873c8",
    "metadata": {
     "tags": []
@@ -37,17 +37,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "05d199bb-96b5-45ff-8454-3386ba02253d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_legislaturas = pd.read_csv('../dados/legislaturas_1934_2023.csv')"
+    "df_legislaturas = pd.read_csv('../dados/legislaturas_1934_2023_limpas.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "24d26dda-b12b-4ad6-ab3f-3c3ff3d0ebd2",
    "metadata": {},
    "outputs": [
@@ -83,58 +83,51 @@
        "      <th>0</th>\n",
        "      <td>56</td>\n",
        "      <td>https://dadosabertos.camara.leg.br/api/v2/legi...</td>\n",
-       "      <td>2019-02-01</td>\n",
-       "      <td>2023-01-31</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2023</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>55</td>\n",
        "      <td>https://dadosabertos.camara.leg.br/api/v2/legi...</td>\n",
-       "      <td>2015-02-01</td>\n",
-       "      <td>2019-01-31</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>2019</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>54</td>\n",
        "      <td>https://dadosabertos.camara.leg.br/api/v2/legi...</td>\n",
-       "      <td>2011-02-01</td>\n",
-       "      <td>2015-01-31</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>2015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>53</td>\n",
        "      <td>https://dadosabertos.camara.leg.br/api/v2/legi...</td>\n",
-       "      <td>2007-02-01</td>\n",
-       "      <td>2011-01-31</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>2011</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>52</td>\n",
        "      <td>https://dadosabertos.camara.leg.br/api/v2/legi...</td>\n",
-       "      <td>2003-02-01</td>\n",
-       "      <td>2007-01-31</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>2007</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id                                                uri  dataInicio  \\\n",
-       "0  56  https://dadosabertos.camara.leg.br/api/v2/legi...  2019-02-01   \n",
-       "1  55  https://dadosabertos.camara.leg.br/api/v2/legi...  2015-02-01   \n",
-       "2  54  https://dadosabertos.camara.leg.br/api/v2/legi...  2011-02-01   \n",
-       "3  53  https://dadosabertos.camara.leg.br/api/v2/legi...  2007-02-01   \n",
-       "4  52  https://dadosabertos.camara.leg.br/api/v2/legi...  2003-02-01   \n",
-       "\n",
-       "      dataFim  \n",
-       "0  2023-01-31  \n",
-       "1  2019-01-31  \n",
-       "2  2015-01-31  \n",
-       "3  2011-01-31  \n",
-       "4  2007-01-31  "
+       "   id                                                uri  dataInicio  dataFim\n",
+       "0  56  https://dadosabertos.camara.leg.br/api/v2/legi...        2019     2023\n",
+       "1  55  https://dadosabertos.camara.leg.br/api/v2/legi...        2015     2019\n",
+       "2  54  https://dadosabertos.camara.leg.br/api/v2/legi...        2011     2015\n",
+       "3  53  https://dadosabertos.camara.leg.br/api/v2/legi...        2007     2011\n",
+       "4  52  https://dadosabertos.camara.leg.br/api/v2/legi...        2003     2007"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "d33cf774-8dc1-4bf7-b82f-e65c8b535606",
    "metadata": {},
    "outputs": [],
@@ -163,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "e9ad2488-ed01-4de0-b348-f51cc6dec0c7",
    "metadata": {},
    "outputs": [],
@@ -173,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "197ec5b4-8f08-422a-ba28-e725de86fe89",
    "metadata": {},
    "outputs": [],
@@ -183,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "e6d1626f-ce9c-4dda-bc3e-92beab378061",
    "metadata": {},
    "outputs": [
@@ -193,7 +186,7 @@
        "array([53, 52, 51, 50])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "9d2b0c18-8c78-4d62-8fb8-690911741597",
    "metadata": {},
    "outputs": [],
@@ -230,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "ce18c43a-59fa-46de-ac0a-b4ab4e9fe15b",
    "metadata": {},
    "outputs": [],
@@ -240,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "69f90008-902e-4db6-8079-fbbbc15709c7",
    "metadata": {},
    "outputs": [],
@@ -250,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "648c6641-5d07-43b0-8fca-36774708913e",
    "metadata": {},
    "outputs": [
@@ -354,7 +347,7 @@
        "7             53    M            594        91.95"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "bee635de-d0d3-4eae-9cc3-895593f102e8",
    "metadata": {},
    "outputs": [],
@@ -384,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "c71a61a3-5a9d-4480-ac2d-acf3bdb89604",
    "metadata": {},
    "outputs": [],
@@ -402,17 +395,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "aa4b38c1-4862-49b6-9887-5f62a85fdf02",
+   "execution_count": 14,
+   "id": "9f7d88ab-9534-42b9-a3fe-fb688bd8defd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "legislaturas_lista_h1 = ['1995', '1999', '2003', '2007']"
+    "legislaturas_lista_h1 = df_legislaturas[(df_legislaturas['id'] >= 50) & (df_legislaturas['id'] <= 53)]['dataInicio'].unique().tolist()\n",
+    "legislaturas_lista_h1.sort()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
+   "id": "b37dc80a-6c8c-4587-b151-a594f5cb2aeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1995', '1999', '2003', '2007']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "legislaturas_lista_h1 = list(map(str, legislaturas_lista_h1))\n",
+    "legislaturas_lista_h1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "f113e339-e35c-4cfa-bd19-16fd1d43feab",
    "metadata": {},
    "outputs": [
@@ -448,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "9b741c36-7746-4613-af53-c2a21f69e631",
    "metadata": {},
    "outputs": [
@@ -458,7 +474,7 @@
        "array([<AxesSubplot:>, <AxesSubplot:>], dtype=object)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -481,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "7d01681b-dad7-4b6d-a6ec-2b20fd3e92df",
    "metadata": {},
    "outputs": [],
@@ -491,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "f396a8a4-f30d-4ddd-a7a6-6296791585f3",
    "metadata": {},
    "outputs": [
@@ -535,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "id": "aebd9912-bd7e-4659-837d-c898cf08bf92",
    "metadata": {},
    "outputs": [],
@@ -545,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "id": "fc3ecf44-15c1-4170-82f1-ec97163fd541",
    "metadata": {},
    "outputs": [],
@@ -555,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "id": "f13322d8-cc87-4da7-b6bc-ee3e4885fb47",
    "metadata": {},
    "outputs": [
@@ -565,7 +581,7 @@
        "array([56, 55, 54, 53])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "id": "2362e44e-daf9-4934-93ef-dd3a4e521635",
    "metadata": {},
    "outputs": [],
@@ -602,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "id": "5460c459-135f-43a1-bfef-0d8e8732a18b",
    "metadata": {},
    "outputs": [],
@@ -612,12 +628,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "id": "1101276b-2ee2-4846-857a-07f02ea55e31",
    "metadata": {},
    "outputs": [],
    "source": [
     "agrupa_sexo_h2_df = agrupa_sexo_h2.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "430ba62a-7dfd-410b-a3ca-e2030ed3ea93",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>valorAbsoluto</th>\n",
+       "      <th>porcentagem</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>idLegislatura</th>\n",
+       "      <th>sexo</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">53</th>\n",
+       "      <th>F</th>\n",
+       "      <td>52</td>\n",
+       "      <td>8.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>594</td>\n",
+       "      <td>91.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">54</th>\n",
+       "      <th>F</th>\n",
+       "      <td>60</td>\n",
+       "      <td>8.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>611</td>\n",
+       "      <td>91.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">55</th>\n",
+       "      <th>F</th>\n",
+       "      <td>66</td>\n",
+       "      <td>10.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>567</td>\n",
+       "      <td>89.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">56</th>\n",
+       "      <th>F</th>\n",
+       "      <td>87</td>\n",
+       "      <td>14.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>509</td>\n",
+       "      <td>85.40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    valorAbsoluto  porcentagem\n",
+       "idLegislatura sexo                            \n",
+       "53            F                52         8.05\n",
+       "              M               594        91.95\n",
+       "54            F                60         8.94\n",
+       "              M               611        91.06\n",
+       "55            F                66        10.43\n",
+       "              M               567        89.57\n",
+       "56            F                87        14.60\n",
+       "              M               509        85.40"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agrupa_sexo_h2"
    ]
   },
   {
@@ -630,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 27,
    "id": "2e7b21c9-b502-403f-b27d-68e877efdf45",
    "metadata": {},
    "outputs": [],
@@ -641,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 28,
    "id": "95c4de74-f602-4a8e-9b55-fd9a0b00ea68",
    "metadata": {},
    "outputs": [],
@@ -659,17 +784,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "8a34395a-1e76-4851-9132-508ff3e4fbd2",
+   "execution_count": 41,
+   "id": "9840aa3c-abe0-457b-a30d-225aa47e164c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "legislaturas_lista_h2 = ['2007', '2011', '2015', '2019']"
+    "legislaturas_lista_h2 = df_legislaturas[(df_legislaturas['id'] >= 53) & (df_legislaturas['id'] <= 56)]['dataInicio'].unique().tolist()\n",
+    "legislaturas_lista_h2.sort()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
+   "id": "6b576f91-6438-458a-b392-68ea1af23592",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2007', '2011', '2015', '2019']"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "legislaturas_lista_h2 = list(map(str, legislaturas_lista_h2))\n",
+    "legislaturas_lista_h2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "id": "84e1a7a3-2104-4cc0-b7b8-056cc0ad34a5",
    "metadata": {},
    "outputs": [
@@ -705,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 33,
    "id": "3fa0e5cf-3cb0-4d83-a49f-7cf3053128d5",
    "metadata": {},
    "outputs": [
@@ -715,7 +863,7 @@
        "array([<AxesSubplot:>, <AxesSubplot:>], dtype=object)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -738,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 34,
    "id": "f7791a2a-e599-445b-abfd-a5c5feeeeabe",
    "metadata": {},
    "outputs": [],
@@ -748,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 35,
    "id": "73e51043-f9e4-40e6-bfe2-d16f2946b5f6",
    "metadata": {},
    "outputs": [
