roda notebooks e insere diagrama de fluxo noteboks

--- a/tratamento-dados/tratamento-legislaturas.ipynb
+++ b/tratamento-dados/tratamento-legislaturas.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "72429fd4-bdcf-4a4b-9051-cf9d9540e687",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "d7a04e36-142f-43f6-a5c4-c3aadf7383ba",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "eebe249c-5d5a-4b0f-896a-f647fe4d43ac",
    "metadata": {},
    "outputs": [
@@ -128,31 +128,182 @@
        "      <td>2003-02-01</td>\n",
        "      <td>2007-01-31</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>51</td>\n",
+       "      <td>https://dadosabertos.camara.leg.br/api/v2/legi...</td>\n",
+       "      <td>1999-02-01</td>\n",
+       "      <td>2003-01-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>50</td>\n",
+       "      <td>https://dadosabertos.camara.leg.br/api/v2/legi...</td>\n",
+       "      <td>1995-02-01</td>\n",
+       "      <td>1999-01-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>49</td>\n",
+       "      <td>https://dadosabertos.camara.leg.br/api/v2/legi...</td>\n",
+       "      <td>1991-02-01</td>\n",
+       "      <td>1995-01-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>48</td>\n",
+       "      <td>https://dadosabertos.camara.leg.br/api/v2/legi...</td>\n",
+       "      <td>1987-02-01</td>\n",
+       "      <td>1991-01-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>47</td>\n",
+       "      <td>https://dadosabertos.camara.leg.br/api/v2/legi...</td>\n",
+       "      <td>1983-02-01</td>\n",
+       "      <td>1987-01-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>46</td>\n",
+       "      <td>https://dadosabertos.camara.leg.br/api/v2/legi...</td>\n",
+       "      <td>1979-02-01</td>\n",
+       "      <td>1983-01-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>45</td>\n",
+       "      <td>https://dadosabertos.camara.leg.br/api/v2/legi...</td>\n",
+       "      <td>1975-02-01</td>\n",
+       "      <td>1979-01-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>44</td>\n",
+       "      <td>https://dadosabertos.camara.leg.br/api/v2/legi...</td>\n",
+       "      <td>1971-02-01</td>\n",
+       "      <td>1975-01-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>43</td>\n",
+       "      <td>https://dadosabertos.camara.leg.br/api/v2/legi...</td>\n",
+       "      <td>1967-02-01</td>\n",
+       "      <td>1971-01-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>42</td>\n",
+       "      <td>https://dadosabertos.camara.leg.br/api/v2/legi...</td>\n",
+       "      <td>1963-02-01</td>\n",
+       "      <td>1967-01-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>41</td>\n",
+       "      <td>https://dadosabertos.camara.leg.br/api/v2/legi...</td>\n",
+       "      <td>1959-02-01</td>\n",
+       "      <td>1963-01-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>40</td>\n",
+       "      <td>https://dadosabertos.camara.leg.br/api/v2/legi...</td>\n",
+       "      <td>1955-02-01</td>\n",
+       "      <td>1959-01-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>39</td>\n",
+       "      <td>https://dadosabertos.camara.leg.br/api/v2/legi...</td>\n",
+       "      <td>1951-03-10</td>\n",
+       "      <td>1955-01-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>38</td>\n",
+       "      <td>https://dadosabertos.camara.leg.br/api/v2/legi...</td>\n",
+       "      <td>1946-09-23</td>\n",
+       "      <td>1951-03-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>37</td>\n",
+       "      <td>https://dadosabertos.camara.leg.br/api/v2/legi...</td>\n",
+       "      <td>1935-04-28</td>\n",
+       "      <td>1937-11-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>36</td>\n",
+       "      <td>https://dadosabertos.camara.leg.br/api/v2/legi...</td>\n",
+       "      <td>1934-07-21</td>\n",
+       "      <td>1935-04-27</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id                                                uri dataInicio    dataFim\n",
-       "0  56  https://dadosabertos.camara.leg.br/api/v2/legi... 2019-02-01 2023-01-31\n",
-       "1  55  https://dadosabertos.camara.leg.br/api/v2/legi... 2015-02-01 2019-01-31\n",
-       "2  54  https://dadosabertos.camara.leg.br/api/v2/legi... 2011-02-01 2015-01-31\n",
-       "3  53  https://dadosabertos.camara.leg.br/api/v2/legi... 2007-02-01 2011-01-31\n",
-       "4  52  https://dadosabertos.camara.leg.br/api/v2/legi... 2003-02-01 2007-01-31"
+       "    id                                                uri dataInicio  \\\n",
+       "0   56  https://dadosabertos.camara.leg.br/api/v2/legi... 2019-02-01   \n",
+       "1   55  https://dadosabertos.camara.leg.br/api/v2/legi... 2015-02-01   \n",
+       "2   54  https://dadosabertos.camara.leg.br/api/v2/legi... 2011-02-01   \n",
+       "3   53  https://dadosabertos.camara.leg.br/api/v2/legi... 2007-02-01   \n",
+       "4   52  https://dadosabertos.camara.leg.br/api/v2/legi... 2003-02-01   \n",
+       "5   51  https://dadosabertos.camara.leg.br/api/v2/legi... 1999-02-01   \n",
+       "6   50  https://dadosabertos.camara.leg.br/api/v2/legi... 1995-02-01   \n",
+       "7   49  https://dadosabertos.camara.leg.br/api/v2/legi... 1991-02-01   \n",
+       "8   48  https://dadosabertos.camara.leg.br/api/v2/legi... 1987-02-01   \n",
+       "9   47  https://dadosabertos.camara.leg.br/api/v2/legi... 1983-02-01   \n",
+       "10  46  https://dadosabertos.camara.leg.br/api/v2/legi... 1979-02-01   \n",
+       "11  45  https://dadosabertos.camara.leg.br/api/v2/legi... 1975-02-01   \n",
+       "12  44  https://dadosabertos.camara.leg.br/api/v2/legi... 1971-02-01   \n",
+       "13  43  https://dadosabertos.camara.leg.br/api/v2/legi... 1967-02-01   \n",
+       "14  42  https://dadosabertos.camara.leg.br/api/v2/legi... 1963-02-01   \n",
+       "15  41  https://dadosabertos.camara.leg.br/api/v2/legi... 1959-02-01   \n",
+       "16  40  https://dadosabertos.camara.leg.br/api/v2/legi... 1955-02-01   \n",
+       "17  39  https://dadosabertos.camara.leg.br/api/v2/legi... 1951-03-10   \n",
+       "18  38  https://dadosabertos.camara.leg.br/api/v2/legi... 1946-09-23   \n",
+       "19  37  https://dadosabertos.camara.leg.br/api/v2/legi... 1935-04-28   \n",
+       "20  36  https://dadosabertos.camara.leg.br/api/v2/legi... 1934-07-21   \n",
+       "\n",
+       "      dataFim  \n",
+       "0  2023-01-31  \n",
+       "1  2019-01-31  \n",
+       "2  2015-01-31  \n",
+       "3  2011-01-31  \n",
+       "4  2007-01-31  \n",
+       "5  2003-01-31  \n",
+       "6  1999-01-31  \n",
+       "7  1995-01-31  \n",
+       "8  1991-01-31  \n",
+       "9  1987-01-31  \n",
+       "10 1983-01-31  \n",
+       "11 1979-01-31  \n",
+       "12 1975-01-31  \n",
+       "13 1971-01-31  \n",
+       "14 1967-01-31  \n",
+       "15 1963-01-31  \n",
+       "16 1959-01-31  \n",
+       "17 1955-01-31  \n",
+       "18 1951-03-09  \n",
+       "19 1937-11-10  \n",
+       "20 1935-04-27  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_legislaturas.head()"
+    "df_legislaturas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "014656ca-3573-4cf7-b79e-72ef2574f0d2",
    "metadata": {},
    "outputs": [],
@@ -162,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "3d5e3bd7-ea56-445d-83f0-884388442236",
    "metadata": {},
    "outputs": [],
@@ -172,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "e04e398c-8e4f-468b-b4e6-331407f4aca7",
    "metadata": {},
    "outputs": [],
