--- a/tratamento-dados/tratamento-candidaturas-eleitas.ipynb
+++ b/tratamento-dados/tratamento-candidaturas-eleitas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "5e2f4128-f32d-406a-a939-b4b819f211b3",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "ede19130-2dab-4632-8f57-fe31e2ec44a8",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "61ebc410-cc83-431b-893e-52141d0bed38",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
        "      <td>178901</td>\n",
        "      <td>https://dadosabertos.camara.leg.br/api/v2/depu...</td>\n",
        "      <td>Tereza Cristina</td>\n",
-       "      <td>DEM</td>\n",
+       "      <td>UNIÃO</td>\n",
        "      <td>https://dadosabertos.camara.leg.br/api/v2/part...</td>\n",
        "      <td>MS</td>\n",
        "      <td>56</td>\n",
@@ -158,7 +158,7 @@
        "0          PSOL  https://dadosabertos.camara.leg.br/api/v2/part...      PA   \n",
        "1  REPUBLICANOS  https://dadosabertos.camara.leg.br/api/v2/part...      BA   \n",
        "2          PSDB  https://dadosabertos.camara.leg.br/api/v2/part...      AL   \n",
-       "3           DEM  https://dadosabertos.camara.leg.br/api/v2/part...      MS   \n",
+       "3         UNIÃO  https://dadosabertos.camara.leg.br/api/v2/part...      MS   \n",
        "4          PSOL  https://dadosabertos.camara.leg.br/api/v2/part...      RJ   \n",
        "\n",
        "   idLegislatura                                            urlFoto  \\\n",
@@ -176,7 +176,7 @@
        "4  dep.taliriapetrone@camara.leg.br    F  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "bae441b1-81cd-4a1d-aadf-d3807d040a08",
    "metadata": {},
    "outputs": [],
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "a7a0b499-6efe-4f49-8c1d-e4257c6319fd",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>178901</td>\n",
-       "      <td>DEM</td>\n",
+       "      <td>UNIÃO</td>\n",
        "      <td>MS</td>\n",
        "      <td>56</td>\n",
        "      <td>F</td>\n",
@@ -288,11 +288,11 @@
        "0  215044          PSOL      PA             56    F\n",
        "1  178862  REPUBLICANOS      BA             56    F\n",
        "2  204466          PSDB      AL             56    F\n",
-       "3  178901           DEM      MS             56    F\n",
+       "3  178901         UNIÃO      MS             56    F\n",
        "4  204464          PSOL      RJ             56    F"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "b1cc9b10-f1ca-4862-a7c1-ca7782f48d9d",
    "metadata": {},
    "outputs": [
@@ -326,7 +326,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "75d46484-096b-4850-b766-845569f26fea",
    "metadata": {},
    "outputs": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "1c0748f9-5549-482e-9543-e6768d06ce54",
    "metadata": {},
    "outputs": [
@@ -374,7 +374,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "8bbb23c3-8850-4929-9d95-e15c686157ef",
    "metadata": {},
    "outputs": [],
