--- a/classifica-proposicoes.ipynb
+++ b/classifica-proposicoes.ipynb
@@ -9,8 +9,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-27 10:50:57.325420: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-02-27 10:50:57.325446: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+      "2022-02-27 13:21:49.099794: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-02-27 13:21:49.099838: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
      ]
     }
    ],
@@ -934,7 +934,7 @@
    "outputs": [],
    "source": [
     "df_proposicoes_total_classificadas = pd.DataFrame([ementas,le.inverse_transform(clf.predict(ementas_hasher))]).transpose().rename(\n",
-    "    columns={0:\"ementa\",1:\"tema\"})"
+    "    columns={0:\"ementa\",1:\"temas\"})"
    ]
   },
   {
@@ -964,7 +964,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>ementa</th>\n",
-       "      <th>tema</th>\n",
+       "      <th>temas</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1005,7 +1005,7 @@
        "3  MANTÉM ATO DO TRIBUNAL DE CONTAS DA UNIÃO QUE ...   \n",
        "4  MANTEM O ATO DO TRIBUNAL DE CONTAS DA UNIÃO QU...   \n",
        "\n",
-       "                          tema  \n",
+       "                         temas  \n",
        "0  Direitos Humanos e Minorias  \n",
        "1  Direitos Humanos e Minorias  \n",
        "2  Direitos Humanos e Minorias  \n",
@@ -1037,7 +1037,7 @@
       " #   Column  Non-Null Count   Dtype \n",
       "---  ------  --------------   ----- \n",
       " 0   ementa  152386 non-null  object\n",
-      " 1   tema    152386 non-null  object\n",
+      " 1   temas   152386 non-null  object\n",
       "dtypes: object(2)\n",
       "memory usage: 2.3+ MB\n"
      ]
@@ -1099,7 +1099,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>ementa</th>\n",
-       "      <th>tema</th>\n",
+       "      <th>temas</th>\n",
        "      <th>probabilidade_predicao</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1146,7 +1146,7 @@
        "3  MANTÉM ATO DO TRIBUNAL DE CONTAS DA UNIÃO QUE ...   \n",
        "4  MANTEM O ATO DO TRIBUNAL DE CONTAS DA UNIÃO QU...   \n",
        "\n",
-       "                          tema  probabilidade_predicao  \n",
+       "                         temas  probabilidade_predicao  \n",
        "0  Direitos Humanos e Minorias                  0.7600  \n",
        "1  Direitos Humanos e Minorias                  0.5050  \n",
        "2  Direitos Humanos e Minorias                  0.7750  \n",
@@ -1178,7 +1178,7 @@
       " #   Column                  Non-Null Count   Dtype  \n",
       "---  ------                  --------------   -----  \n",
       " 0   ementa                  152386 non-null  object \n",
-      " 1   tema                    152386 non-null  object \n",
+      " 1   temas                   152386 non-null  object \n",
       " 2   probabilidade_predicao  152386 non-null  float64\n",
       "dtypes: float64(1), object(2)\n",
       "memory usage: 3.5+ MB\n"
@@ -1204,7 +1204,7 @@
    "source": [
     "def retira_tema_com_baixa_probabilidade_acerto(proposicoes):\n",
     "        if proposicoes['probabilidade_predicao'] >= 0.85:\n",
-    "            return proposicoes['tema']\n",
+    "            return proposicoes['temas']\n",
     "        else:\n",
     "            return np.nan"
    ]
@@ -1215,13 +1215,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_proposicoes_total_classificadas['tema'] = df_proposicoes_total_classificadas.apply(retira_tema_com_baixa_probabilidade_acerto, \n",
+    "df_proposicoes_total_classificadas['temas'] = df_proposicoes_total_classificadas.apply(retira_tema_com_baixa_probabilidade_acerto, \n",
     "                                                                                      axis=1)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reunir conjunto de dados de proposições legislativas com classificação realizada"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_proposicoes_classificador = df_proposicoes.join(df_proposicoes_total_classificadas, rsuffix='_classificador')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(152386, 12)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_proposicoes_classificador.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1245,95 +1281,153 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>siglaTipo</th>\n",
+       "      <th>ano</th>\n",
+       "      <th>codTipo</th>\n",
+       "      <th>descricaoTipo</th>\n",
        "      <th>ementa</th>\n",
-       "      <th>tema</th>\n",
+       "      <th>ementaDetalhada</th>\n",
+       "      <th>keywords</th>\n",
+       "      <th>temas</th>\n",
+       "      <th>ementa_classificador</th>\n",
+       "      <th>temas_classificador</th>\n",
        "      <th>probabilidade_predicao</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>113094</th>\n",
-       "      <td>Inclui a invenção de medicamento para prevençã...</td>\n",
-       "      <td>Saúde</td>\n",
-       "      <td>0.975</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>59515</th>\n",
-       "      <td>ABRE, PELO MINISTERIO DA VIAÇÃO E OBRAS PUBLIC...</td>\n",
+       "      <th>0</th>\n",
+       "      <td>168293</td>\n",
+       "      <td>PDC</td>\n",
+       "      <td>1965</td>\n",
+       "      <td>135</td>\n",
+       "      <td>Projeto de Decreto Legislativo</td>\n",
+       "      <td>MANTEM DECISÃO DENEGATORIA DO TRIBUNAL DE CONT...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.835</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>67952</th>\n",
-       "      <td>REVOGA O ARTIGO 23 DA LEI Nº 6.515, DE 26 DE D...</td>\n",
-       "      <td>Direito Civil e Processual Civil</td>\n",
-       "      <td>0.930</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>64129</th>\n",
-       "      <td>Dispõe sobre limites para retenção de recursos...</td>\n",
+       "      <td>manutenção,decisão,tribunal,contas,união,tcu,d...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.795</td>\n",
+       "      <td>MANTEM DECISÃO DENEGATORIA DO TRIBUNAL DE CONT...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.7600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>59390</th>\n",
-       "      <td>ABRE, PELO MINISTERIO DA VIAÇÃO E OBRAS PUBLIC...</td>\n",
+       "      <th>1</th>\n",
+       "      <td>168297</td>\n",
+       "      <td>PDC</td>\n",
+       "      <td>1965</td>\n",
+       "      <td>135</td>\n",
+       "      <td>Projeto de Decreto Legislativo</td>\n",
+       "      <td>MANTEM ATO DO TRIBUNAL DE CONTAS DA UNIÃO DE R...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.760</td>\n",
+       "      <td>manutenção,ato,tribunal,contas,união,tcu,recus...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MANTEM ATO DO TRIBUNAL DE CONTAS DA UNIÃO DE R...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.5050</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>168300</td>\n",
+       "      <td>PDC</td>\n",
+       "      <td>1965</td>\n",
+       "      <td>135</td>\n",
+       "      <td>Projeto de Decreto Legislativo</td>\n",
+       "      <td>MANTÉM DECISÃO DENEGATÓRIA DO TRIBUNAL DE CONT...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>manutenção,decisão,tribunal,contas,união,tcu,d...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MANTÉM DECISÃO DENEGATÓRIA DO TRIBUNAL DE CONT...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.7750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>168303</td>\n",
+       "      <td>PDC</td>\n",
+       "      <td>1965</td>\n",
+       "      <td>135</td>\n",
+       "      <td>Projeto de Decreto Legislativo</td>\n",
+       "      <td>MANTÉM ATO DO TRIBUNAL DE CONTAS DA UNIÃO QUE ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>manutenção,ato,tribunal,contas,união,tcu,negaç...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MANTÉM ATO DO TRIBUNAL DE CONTAS DA UNIÃO QUE ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.7150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>168307</td>\n",
+       "      <td>PDC</td>\n",
+       "      <td>1965</td>\n",
+       "      <td>135</td>\n",
+       "      <td>Projeto de Decreto Legislativo</td>\n",
+       "      <td>MANTEM O ATO DO TRIBUNAL DE CONTAS DA UNIÃO QU...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>manutenção,ato,tribunal,contas,união,tcu,deneg...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MANTEM O ATO DO TRIBUNAL DE CONTAS DA UNIÃO QU...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.4725</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                   ementa  \\\n",
-       "113094  Inclui a invenção de medicamento para prevençã...   \n",
-       "59515   ABRE, PELO MINISTERIO DA VIAÇÃO E OBRAS PUBLIC...   \n",
-       "67952   REVOGA O ARTIGO 23 DA LEI Nº 6.515, DE 26 DE D...   \n",
-       "64129   Dispõe sobre limites para retenção de recursos...   \n",
-       "59390   ABRE, PELO MINISTERIO DA VIAÇÃO E OBRAS PUBLIC...   \n",
+       "       id siglaTipo   ano  codTipo                   descricaoTipo  \\\n",
+       "0  168293       PDC  1965      135  Projeto de Decreto Legislativo   \n",
+       "1  168297       PDC  1965      135  Projeto de Decreto Legislativo   \n",
+       "2  168300       PDC  1965      135  Projeto de Decreto Legislativo   \n",
+       "3  168303       PDC  1965      135  Projeto de Decreto Legislativo   \n",
+       "4  168307       PDC  1965      135  Projeto de Decreto Legislativo   \n",
        "\n",
-       "                                    tema  probabilidade_predicao  \n",
-       "113094                             Saúde                   0.975  \n",
-       "59515                                NaN                   0.835  \n",
-       "67952   Direito Civil e Processual Civil                   0.930  \n",
-       "64129                                NaN                   0.795  \n",
-       "59390                                NaN                   0.760  "
+       "                                              ementa ementaDetalhada  \\\n",
+       "0  MANTEM DECISÃO DENEGATORIA DO TRIBUNAL DE CONT...             NaN   \n",
+       "1  MANTEM ATO DO TRIBUNAL DE CONTAS DA UNIÃO DE R...             NaN   \n",
+       "2  MANTÉM DECISÃO DENEGATÓRIA DO TRIBUNAL DE CONT...             NaN   \n",
+       "3  MANTÉM ATO DO TRIBUNAL DE CONTAS DA UNIÃO QUE ...             NaN   \n",
+       "4  MANTEM O ATO DO TRIBUNAL DE CONTAS DA UNIÃO QU...             NaN   \n",
+       "\n",
+       "                                            keywords temas  \\\n",
+       "0  manutenção,decisão,tribunal,contas,união,tcu,d...   NaN   \n",
+       "1  manutenção,ato,tribunal,contas,união,tcu,recus...   NaN   \n",
+       "2  manutenção,decisão,tribunal,contas,união,tcu,d...   NaN   \n",
+       "3  manutenção,ato,tribunal,contas,união,tcu,negaç...   NaN   \n",
+       "4  manutenção,ato,tribunal,contas,união,tcu,deneg...   NaN   \n",
+       "\n",
+       "                                ementa_classificador temas_classificador  \\\n",
+       "0  MANTEM DECISÃO DENEGATORIA DO TRIBUNAL DE CONT...                 NaN   \n",
+       "1  MANTEM ATO DO TRIBUNAL DE CONTAS DA UNIÃO DE R...                 NaN   \n",
+       "2  MANTÉM DECISÃO DENEGATÓRIA DO TRIBUNAL DE CONT...                 NaN   \n",
+       "3  MANTÉM ATO DO TRIBUNAL DE CONTAS DA UNIÃO QUE ...                 NaN   \n",
+       "4  MANTEM O ATO DO TRIBUNAL DE CONTAS DA UNIÃO QU...                 NaN   \n",
+       "\n",
+       "   probabilidade_predicao  \n",
+       "0                  0.7600  \n",
+       "1                  0.5050  \n",
+       "2                  0.7750  \n",
+       "3                  0.7150  \n",
+       "4                  0.4725  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_proposicoes_total_classificadas.sample(5)"
+    "df_proposicoes_classificador.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 152386 entries, 0 to 152385\n",
-      "Data columns (total 3 columns):\n",
-      " #   Column                  Non-Null Count   Dtype  \n",
-      "---  ------                  --------------   -----  \n",
-      " 0   ementa                  152386 non-null  object \n",
-      " 1   tema                    30523 non-null   object \n",
-      " 2   probabilidade_predicao  152386 non-null  float64\n",
-      "dtypes: float64(1), object(2)\n",
-      "memory usage: 3.5+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_proposicoes_total_classificadas.info()"
+    "df_proposicoes_classificador.to_csv('dados/proposicoes_legislativas_limpas_classificadas.csv', index=False)"
    ]
   }
  ],
